--- a/collated/main/A0147924X.md
+++ b/collated/main/A0147924X.md
@@ -468,23 +468,9 @@ public class ExtensionParser {
     }
     
     /**
-     * Parses events and puts the times into the properties
-     * Throw an exception if start time is behind end time
-     * 
-     * @param properties Properties to put in.
-     * @param arguments Arguments specifying the time.
-     * @throws IllegalValueException
-     */
-    private void throwExceptionIfTimeInvalid(String startTime, String endTime) throws IllegalValueException {
-        StartTime start = new StartTime(startTime);
-        EndTime end = new EndTime(endTime);
-        
-        if (start.getTime().after(end.getTime())) {
-            throw new IllegalValueException(START_AFTER_END);
-        }
-    }
-    
-    /**
+```
+###### /java/seedu/manager/logic/parser/ExtensionParser.java
+``` java
      * Adds a property to the properties HashMap
      * 
      * @param properties HashMap to put the new property into.
@@ -595,33 +581,6 @@ public class ExtensionParser {
     public UnmodifiableObservableList<ReadOnlyTask> getSortedFilteredTaskList() {
         return new UnmodifiableObservableList<>(sortedTasks);
     }
-    
-    @Override
-    public UnmodifiableObservableList<Tag> getSortedFilteredTagList() {
-        return new UnmodifiableObservableList<>(sortedTags);
-    }
-    
-    @Override
-    public void updateSortedFilteredListToShowAll() {
-        updateFilteredListToShowAll();
-    }
-    
-    @Override
-    public void sortSortedFilteredTaskListByPriority() {
-    	sortedTasks.setComparator((Task t1, Task t2) -> t1.compareProperty(t2, TaskProperties.PRIORITY));
-    }
-    
-    @Override
-    public void unSortSortedFilteredTaskList() {
-    	sortedTasks.setComparator(null);
-    }
-    
-    @Override
-    public int getIndexOfTask(ReadOnlyTask task) {
-    	return sortedTasks.indexOf(task);
-    }
-
-    //=========== Filtered Task List Accessors ===============================================================
     
 ```
 ###### /java/seedu/manager/model/task/Desc.java
