--- a/collated/docs/A0147924X.md
+++ b/collated/docs/A0147924X.md
@@ -248,6 +248,20 @@ Examples:
   * `edit 4 from 15 Oct to 17 Oct`
 
 
+<a id="at"></a>
+#### At a certain time/date: `at`
+_Specify a start time for a task._<br>
+Format: `at <time/date>`
+
+> A list of supported time and date inputs are listed in [Appendix A](#appendix-a). You may also refer to the examples for a brief guide too. <br>
+
+Examples:
+  * `add Commence update at 23:00`
+  * `edit 2 at 31 Oct '16`
+  * `add Start writing essay at Nov 2 2016 2000`
+  * `edit 5 at 1st May`
+
+
 <a id="before"></a>
 #### Before a certain time/date: `before`
 _Specify a deadline for a task._<br>
@@ -289,8 +303,9 @@ Primary | [Exit](#exit) | `exit`
 Primary | [Next](#next) | `next [before <time>]`
 Primary | [Undo](#undo) | `undo`
 Primary | [Storage](#storage) | `storage <path/to/file/fileName.xml>`
-Extension | [Venue](#venue) | `at <description of venue>`
+Extension | [Venue](#venue) | `venue <description of venue>`
 Extension | [Event](#from-to) | `from <start time> to <end time>`
+Extension | [At](#at) | `at <time>`
 Extension | [Before](#before) | `before <time>`
 Extension | [Priority](#priority) | `priority <low/med/high>`
 
