--- a/collated/main/A0148042M.md
+++ b/collated/main/A0148042M.md
@@ -1,22 +1,4 @@
 # A0148042M
-###### /java/seedu/manager/commons/events/ui/JumpToListRequestEvent.java
-``` java
- * Indicates a request to jump to the list of tasks
- */
-public class JumpToListRequestEvent extends BaseEvent {
-
-    public final int targetIndex;
-
-    public JumpToListRequestEvent(int targetIndex) {
-        this.targetIndex = targetIndex;
-    }
-
-    @Override
-    public String toString() {
-        return this.getClass().getSimpleName();
-    }
-}
-```
 ###### /java/seedu/manager/commons/events/ui/TagPanelSelectionChangedEvent.java
 ``` java
  * Represents a selection change in the Tag List Panel
@@ -48,34 +30,24 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         try {
             model.addTask(toAdd);
             if (toAdd.getTag().isPresent()) {
-                model.addTag((Tag)toAdd.getTag().get());
+                model.addTag((Tag) toAdd.getTag().get());
             }
-            int addedIndex = model.getIndexOfTask(toAdd);
-            assert addedIndex != -1;
+            jumpToTask(toAdd);
             
-            EventsCenter.getInstance().post(new JumpToListRequestEvent(addedIndex));
+            this.addUndo(this);
             
             return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd.getAsPrettyText()));
         } catch (UniqueTaskList.DuplicateTaskException e) {
             return new CommandResult(MESSAGE_DUPLICATE_TASK);
         }
     }
-
-}
+    
 ```
 ###### /java/seedu/manager/logic/Logic.java
 ``` java
     /** Returns the filtered list of tags */
     ObservableList<Tag> getSortedFilteredTagList();
     
-}
-```
-###### /java/seedu/manager/logic/LogicManager.java
-``` java
-    @Override
-    public ObservableList<Tag> getSortedFilteredTagList() {
-        return model.getSortedFilteredTagList();        
-    }
 }
 ```
 ###### /java/seedu/manager/logic/parser/ExtensionParser.java
@@ -96,7 +68,16 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         }
     }
     
-    /**
+```
+###### /java/seedu/manager/logic/parser/ExtensionParser.java
+``` java
+    private void addToTagList(String arguments) throws IllegalValueException {
+        boolean isContained = tagList.contains(new Tag(arguments));
+        if(!isContained) {
+            tagList.add(new Tag(arguments));
+        }
+    }
+}
 ```
 ###### /java/seedu/manager/model/Model.java
 ``` java
@@ -106,17 +87,8 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
 ```
 ###### /java/seedu/manager/model/Model.java
 ``` java
-    /** Returns the sorted and filtered task list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
-    UnmodifiableObservableList<ReadOnlyTask> getSortedFilteredTaskList();
-    
     /** Returns the sorted and filtered tag list as an {@code UnmodifiableObservableList<Tag>} */
     UnmodifiableObservableList<Tag> getSortedFilteredTagList();
-    
-    /** Updates the filter of the sorted and filtered task list to show all tasks */
-    void updateSortedFilteredListToShowAll();
-    
-    /** Updates the filter of the sorted and filtered task list to filter by the given properties from the find function*/
-    void updateFilteredTaskList(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch);
     
 ```
 ###### /java/seedu/manager/model/ModelManager.java
@@ -154,6 +126,8 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         sortedTasks = new SortedList<>(filteredTasks);
         sortedTags = new SortedList<>(filteredTags);
         this.userPrefs = userPrefs;
+        
+        sortSortedFilteredTaskListByProperty(TaskProperties.DONE);
     }
     
 ```
@@ -178,41 +152,15 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         return new UnmodifiableObservableList<>(sortedTags);
     }
     
-    // @author
-    @Override
-    public void updateSortedFilteredListToShowAll() {
-        updateFilteredListToShowAll();
-    }
-    
-    @Override
-    public void sortSortedFilteredTaskListByPriority() {
-    	sortedTasks.setComparator((Task t1, Task t2) -> t1.compareProperty(t2, TaskProperties.PRIORITY));
-    }
-    
-    @Override
-    public void unSortSortedFilteredTaskList() {
-    	sortedTasks.setComparator(null);
-    }
-    
-    @Override
-    public int getIndexOfTask(ReadOnlyTask task) {
-    	return sortedTasks.indexOf(task);
-    }
-
-    //=========== Filtered Task List Accessors ===============================================================
-    
 ```
 ###### /java/seedu/manager/model/ModelManager.java
 ``` java
-    public void updateFilteredListToShowAll() {
-        filteredTasks.setPredicate(null);
-    }
-    
     public void updateFilteredTagListToShowAll() {
         filteredTags.setPredicate(null);
     }
     
     // @author
+    @Override
     public void updateFilteredTaskList(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch) {
         updateFilteredTaskList(new PredicateExpression(new EnhancedSearchQualifier(propertiesToMatch)));
     }
@@ -279,7 +227,9 @@ public class UniqueTagList implements Iterable<Tag> {
             super("Operation would result in duplicate tags");
         }
     }
-
+    
+    public static class TagNotRemovedException extends Exception {};
+    
     private final ObservableList<Tag> internalList = FXCollections.observableArrayList();
 
     /**
@@ -359,6 +309,10 @@ public class UniqueTagList implements Iterable<Tag> {
         assert toCheck != null;
         return internalList.contains(toCheck);
     }
+    
+    public void clear() {
+        this.internalList.clear();
+    }
 
     /**
      * Adds a Tag to the list.
@@ -379,7 +333,17 @@ public class UniqueTagList implements Iterable<Tag> {
     }
 
     public ObservableList<Tag> getInternalList() {
+        
         return internalList;
+    }
+    
+    public boolean remove(Tag toRemove) throws TagNotRemovedException {
+        boolean isTagRemoved = internalList.remove(toRemove);
+        if(!isTagRemoved) {
+            throw new TagNotRemovedException();
+        }
+        
+        return isTagRemoved;
     }
 
     @Override
@@ -403,8 +367,8 @@ public class UniqueTagList implements Iterable<Tag> {
  */
 public class Tag extends TaskProperty {
 
-    public static final String MESSAGE_TAG_CONSTRAINTS = "Tags names should be alphanumeric";
-    public static final String TAG_VALIDATION_REGEX = "\\p{Alnum}+";
+    public static final String MESSAGE_TAG_CONSTRAINTS = "Tags names can have anything";
+    public static final String TAG_VALIDATION_REGEX = ".+";
 
     public String tagName;
 
@@ -444,19 +408,67 @@ public class Tag extends TaskProperty {
         return " [" + tagName + "]";
     }
 
+```
+###### /java/seedu/manager/model/task/Task.java
+``` java
     @Override
-    public boolean matches(TaskProperty tag) {
-        assert tag instanceof Tag;
-        
-        return tag.getValue().equals(this.getValue());
+    public Optional<TaskProperty> getTag() {
+        return properties.get(TaskProperties.TAG);
     }
-
-}
+    
+```
+###### /java/seedu/manager/model/task/Time.java
+``` java
+     * @return this property's time
+     */
+    public Date getTime() {
+        return value;
+    }
+    
+    /**
 ```
 ###### /java/seedu/manager/model/TaskManager.java
 ``` java
     public ObservableList<Tag> getTags() {
-        return tags.getInternalList();
+        ObservableList<Tag> internalTagList = tags.getInternalList();
+        ObservableList<Tag> tagListFromTaskList = getTagsFromTaskList(this.getTasks());
+
+//        try {
+//            tags.mergeFrom(new UniqueTagList(tagListFromTaskList));
+//        } catch (DuplicateTagException e) {
+//            e.printStackTrace();
+//        }
+        
+        return combineTwoList(internalTagList, tagListFromTaskList);
+    }
+    
+    public ObservableList<Tag> combineTwoList(ObservableList<Tag> internalTagList, 
+            ObservableList<Tag> tagListFromTaskList) {
+        ObservableList<Tag> combinedTagList = internalTagList;
+        
+        if(internalTagList.size() == 0) {
+            for(int i = 0;i < tagListFromTaskList.size();i++) {
+                if(!internalTagList.contains(tagListFromTaskList.get(i))) {
+//                    internalTagList.add(tagListFromTaskList.get(i));
+                    combinedTagList.add(tagListFromTaskList.get(i));
+                }
+            }
+        } 
+        
+        return combinedTagList;
+    }
+    
+    public ObservableList<Tag> getTagsFromTaskList(ObservableList<Task> taskList) {
+        ObservableList<Tag> tagList = FXCollections.observableArrayList();
+        for(int i = 0;i < taskList.size();i++) {
+            if(taskList.get(i).getTag().isPresent()) {
+                Tag tag = (Tag) taskList.get(i).getTag().get();
+                if(!tagList.contains(tag)) {
+                    tagList.add(tag);
+                }
+            }
+        }
+        return tagList;
     }
 
 ```
@@ -650,13 +662,6 @@ public class MainWindow extends UiPart {
         return this.taskListPanel;
     }
     
-    /**
-     * Render Status Bar Footer again, used when storage location in config changes
-     */
-    public void rerenderStatusBarFooter() {
-    	statusBarFooter = StatusBarFooter.load(primaryStage, getStatusbarPlaceholder(), config.getTaskManagerFilePath());
-    }
-}
 ```
 ###### /java/seedu/manager/ui/TagCard.java
 ``` java
@@ -697,7 +702,7 @@ public class TagCard extends UiPart{
     @FXML
     public void initialize() {
         id.setText(displayedIndex + ". ");
-//        tag.setText(task.getTag().isPresent() ? task.getTag().get().getPrettyValue() : "");
+    // tag.setText(task.getTag().isPresent() ? task.getTag().get().getPrettyValue() : "");
         tag.setText(tagToLoad.getValue());
     }
 
@@ -1104,7 +1109,7 @@ public class TagListPanel extends UiPart {
 		<SplitPane id="splitPane" fx:id="splitPane"
 			dividerPositions="0.4" VBox.vgrow="ALWAYS">
 			<items>
-				<VBox fx:id="tagList" minWidth="340" prefWidth="400">
+				<VBox fx:id="tagList" minWidth="100" prefWidth="100">
 					<padding>
 						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 					</padding>
@@ -1114,7 +1119,7 @@ public class TagListPanel extends UiPart {
 					</children>
 				</VBox>
 				
-				<VBox fx:id="taskList" minWidth="340" prefWidth="900">
+				<VBox fx:id="taskList" minWidth="300" prefWidth="300">
 					<padding>
 						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 					</padding>
@@ -1153,17 +1158,10 @@ public class TagListPanel extends UiPart {
                             <children>
                                 <HBox>
                                     <Label fx:id="id" styleClass="cell_big_label" />
-                                    <!-- <Label fx:id="desc" styleClass="cell_big_label" text="\$first" /> -->
                                     <Label fx:id="tag" styleClass="cell_big_label" text="\$tag" />
                                 </HBox>
                             </children>
                         </HBox>
-<!--                         <Label fx:id="venue" styleClass="cell_small_label" text="\$venue" />
-                        <Label fx:id="priority" styleClass="cell_small_label" text="\$priority" />
-                        <Label fx:id="startTime" styleClass="cell_small_label" text="\$startTime" />
-                        <Label fx:id="endTime" styleClass="cell_small_label" text="\$endTime" />
-                        <Label fx:id="done" styleClass="cell_small_label" text="\$done" />
-                        <Label fx:id="tag" styleClass="cell_small_label" text="\$tag" /> -->
                     </children>
                 </VBox>
             </children>
